--- a/SvelteFT/src/app.css
+++ b/SvelteFT/src/app.css
@@ -1,4 +1,4 @@
-*,*::before,*::after {
+/* *,*::before,*::after {
   box-sizing: border-box;
   transition: all 0.5s ease-in-out;
 }
@@ -9,4 +9,4 @@ body {
 
 h1 {
     color: white;
-}
+} */
